--- a/my portfolio/index.html
+++ b/my portfolio/index.html
@@ -59,7 +59,7 @@
                       <h2>C Vyshnavi</h2>
                       <p>An enthusiatic second year BTech student born in kerala.She is the only daughter of her parents. She completed her 10th and 12th standard from a CBSE school with an agrregate of 95%.</p>
                       <div class="main-btn"><a href="#2">Read More</a></div><br><br>
-                      <div class="fb-btn"><a rel="nofollow" href="mailto:vyshnu0602@gmail.com">Mail Me</a></div>
+                      <div class="fb-btn"><a rel="nofollow" href="mailto:vysh@gmail.com">Mail Me</a></div>
                   </div>
               </div>
             </div>
