--- a/my portfolio/index.html
+++ b/my portfolio/index.html
@@ -44,7 +44,7 @@
             <li><a href="#2"><i class="fa fa-user"></i> <em>About</em></a></li>
             <li><a href="#3"><i class="fa fa-pencil"></i> <em>Skills</em></a></li>
             <li><a href="#4"><i class="fa fa-image"></i> <em>Sketches</em></a></li>
-            <li><a href="#5"><i class="fa fa-envelope"></i> <em>Contact</em></a></li>
+            <!-- <li><a href="#5"><i class="fa fa-envelope"></i> <em>Contact</em></a></li> -->
           </ul>
         </nav>
         
@@ -57,9 +57,9 @@
                   </div>
                   <div class="col-md-9">
                       <h2>C Vyshnavi</h2>
-                      <p>An enthusiatic second year BTech student born in kerala.She is the only daughter of her parents. She completed her 10th and 12th standard from a CBSE school with an agrregate of 95%.</p>
+                      <p>An enthusiatic second year BTech student born in kerala.She completed her 10th and 12th standard from a CBSE school with an agrregate of 95%.</p>
                       <div class="main-btn"><a href="#2">Read More</a></div><br><br>
-                      <div class="fb-btn"><a rel="nofollow" href="mailto:vysh@gmail.com">Mail Me</a></div>
+                      <div class="fb-btn"><a rel="nofollow" href="mailto:vy02@gmail.com">Mail Me</a></div>
                   </div>
               </div>
             </div>
@@ -70,7 +70,7 @@
                     <div class="col-md-6">
                         <div class="left-content">
                             <h2>About me</h2>
-                            <p>Currently doing my Btech in Electrical and electronics engineering. My strengths is that I am diligent and self motivated. </p> 
+                            <p>Currently doing my Btech.My dream is to join ISRO. My strengths is that I am diligent and self motivated. </p> 
                             <p>My weakness is that I am a perfectionist and thus end up spending too much time on getting everything perfect.</p>
                             <p>Above all these, I consider my parents to be my greatest strength.</p>
                             <p>My hobbies inlcude doodling and sketching. Coming to my long term goal, I wish to utilize my skills and experience for my professional growth.</p>
@@ -333,21 +333,19 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- <div class="main-btn"><a href="#5">Continue</a></div> -->
                     </div>
                 </div>
             </div>
           </div>
-          <div class="slide" id="5">
+          <!-- <div class="slide" id="5">
             <div class="content fifth-content">
                 <div class="container-fluid">
                     <div class="col-md-6">
                         <div id="map">
-    <!-- How to change your own map point
+    How to change your own map point
             1. Go to Google Maps
-            2. Click on your location point
-            3. Click "Share" and choose "Embed map" tab
-            4. Copy only URL and paste it within the src="" field below
-	-->
+            2. Click on
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3647.3030413476204!2d100.5641230193719!3d13.757206847615207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf51ce6427b7918fc!2sG+Tower!5e0!3m2!1sen!2sth!4v1510722015945" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                     </div>
@@ -356,7 +354,10 @@
                             <div class="row">
                                 <div class="col-md-12">
                                   <fieldset>
-                                    <input name="name" type="text" class="form-control" id="name" placeholder="Your name..." required="">
+                                     your location point
+            3. Click "Share" and choose "Embed map" tab
+            4. Copy only URL and paste it within the src="" field below -->
+            <!-- <input name="name" type="text" class="form-control" id="name" placeholder="Your name..." required="">
                                   </fieldset>
                                 </div>
                                 <div class="col-md-12">
@@ -382,8 +383,8 @@
                             </div>
                         </form>
                     </div>
-                </div>
-            </div>
+                </div>  -->
+            <!-- </div> -->
           </div>
         </div>
 
